--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -48,7 +49,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0"
+    def navigation_version = "2.4.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+
+    //Dagger2
+    def dagger2_version = '2.38.1'
+    implementation  "com.google.dagger:dagger:$dagger2_version"
+    kapt  "com.google.dagger:dagger-compiler:$dagger2_version"
+
+
 
 }
