--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 apply from: "$project.rootDir/dependencies.gradle"
@@ -70,6 +71,6 @@ dependencies {
 
     implementation project(':remote')
 
-
+    implementation project(':core:core')
 
 }
