--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,5 +17,12 @@ ext {
     okhttp3 =  "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     //Picasso
-    picasso = "com.squareup.picasso:picasso:2.71828"
+    picasso = "com.squareup.picasso:picasso:2.8"
+
+    //Room
+    room_version = '2.4.2'
+    room_runtime = "androidx.room:room-runtime:$room_version"
+    room_ktx = "androidx.room:room-ktx:$room_version"
+    room_rxjava3 = "androidx.room:room-rxjava3:$room_version"
+    room_compiler = "androidx.room:room-compiler:$room_version"
 }
