Made tabs overview, ingredients, equipment, instructions.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,12 +59,16 @@ dependencies {
 
     //Dagger2
     implementation dagger2
+    implementation dagger2_android_support
     kapt dagger2_compiler
+    kapt dagger2_processor
 
     //RxJava
     implementation rxandroid
     implementation rxjava
     implementation rxkotlin
+
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     //Picasso
     implementation picasso
