Added restart alarms after system reboot. Remade logging through Timber. Small refactoring.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     //Picasso
     implementation picasso
 
+    //Timber
+    implementation timber
+
     implementation project(':remote')
 
     implementation project(':core:core')
