--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,6 +21,9 @@ ext {
     //Picasso
     picasso = "com.squareup.picasso:picasso:2.8"
 
+    //Timber
+    timber = 'com.jakewharton.timber:timber:5.0.1'
+
     //Room
     room_version = '2.4.2'
     room_runtime = "androidx.room:room-runtime:$room_version"
