--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,12 +48,21 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+
+    //Test
+    testImplementation 'junit:junit:4.13.4'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    debugImplementation 'androidx.fragment:fragment-testing:1.4.1'
+    androidTestImplementation 'androidx.test:core:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+
 
     //Navigation
-    def navigation_version = "2.4.1"
+    def navigation_version = "2.4.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
@@ -68,8 +77,10 @@ dependencies {
     implementation rxjava
     implementation rxkotlin
 
+    //RV
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
+    //Gson_converter
     implementation converter_gson
 
     //Picasso
