--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,19 @@ plugins {
 apply from: "$project.rootDir/dependencies.gradle"
 
 android {
+    Properties localProperties = new Properties()
+    if (project.rootProject.file('local.properties').canRead()) {
+        localProperties.load(project.rootProject.file("local.properties").newDataInputStream())
+    }
+
+    signingConfigs {
+        release {
+            storeFile file(localProperties.getProperty("SINGING_STORE_FILE"))
+            storePassword localProperties.getProperty("SINGING_STORE_PASSWORD")
+            keyAlias localProperties.getProperty("KEY_ALIAS")
+            keyPassword localProperties.getProperty("KEY_PASSWORD")
+        }
+    }
     compileSdk 31
 
     buildFeatures {
@@ -24,6 +37,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
@@ -48,12 +62,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+
+//    implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
 
     //Test
-    testImplementation 'junit:junit:4.13.4'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'androidx.test:runner:1.4.0'
+    testImplementation 'org.mockito:mockito-core:3.8.0'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.1.0"
     debugImplementation 'androidx.fragment:fragment-testing:1.4.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'androidx.test:core:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test:runner:1.4.0'
