--- a/core/core_impl/build.gradle
+++ b/core/core_impl/build.gradle
@@ -31,14 +31,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'xyz.flussigkatz.core_impl'
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    testImplementation 'junit:junit:4.13.2'
+    //Test
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
