--- a/remote/build.gradle
+++ b/remote/build.gradle
@@ -30,17 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'xyz.flussigkatz.remote'
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     //Dagger2
     implementation dagger2
     kapt dagger2_compiler
@@ -57,5 +50,4 @@ dependencies {
     implementation rxandroid
     implementation rxjava
     implementation rxkotlin
-
 }
